--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,19 @@ license = "MIT/Apache-2.0"
 publish = false
 
 [dependencies]
-qrcode-generator = "5"
-clap = "4.5"
-toml = "0.8"
+qrcode-generator = "5"                            # QR code tooling
+clap = { version = "4.5", features = ["derive"] } # CLI app tooling
+toml = "0.8"                                      # TOML for config files
+url = "2.5"                                       # URL verification
 
 # TODO: These crates have partial implementations and will probably need some work.
 #vcard = "0.4.13"
 #ical = "0.11.0"
 
-url = "2.5"
-viuer = "0.9"
+[profile.release]
+opt-level = 2
+lto = true
+
+# Optimize all dependencies even in debug builds
+[profile.dev.package."*"]
+opt-level = 2
